Replaced sout for logger. Enabled all actuator endpoints.

--- a/cloud-stream/src/main/resources/application.properties
+++ b/cloud-stream/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.cloud.stream.bindings.errors-in.destination=errors
 spring.cloud.stream.bindings.errors-in.contentType=application/json
 spring.cloud.stream.bindings.errors-out.destination=errors
 spring.cloud.stream.bindings.errors-out.contentType=application/json
+management.endpoints.web.exposure.include=*
